--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-        <br><br>
+        
         <button onclick="limpar()">Limpar</button>
         <br><br>
         Euros €.
@@ -50,7 +50,14 @@
         </div>
         <br><br>
 
+        <footer>
+            <br><br>
+            COPYRIGHT Rui Lança 2023
+        </footer>
+
         <script src="main.js"></script>
+
+        
 </body>
 
 </html>
