--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <footer>
             <br><br>
-            COPYRIGHT Rui Lança 2023 x
+            COPYRIGHT Rui Lança 2023 
         </footer>
 
         <script src="main.js"></script>
