--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         <button onclick="limpar()">Limpar</button>
         <br><br>
-        Euros €.
+        <h3>Euros €.</h3>
         <br>
         <br>
         <div class="caixa2" id="saida">
